--- a/styles.css
+++ b/styles.css
@@ -53,3 +53,12 @@ footer {
     display: inline-block;
     max-width: 200px;
 }
+footer a {
+    color: #fff;
+    margin: 0 10px;
+    text-decoration: none;
+    font-size: 20px;
+}
+footer a:hover {
+    color: white;
+}
